# vulpcode

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
dev/: 00_OVERVIEW.md  ler_parquet.py  prompt.sh  risco_modelo.html
dev/DOCUMENTACAO/: 00_OVERVIEW.md  prompt.sh
dev/FASE_01_BOOTSTRAP/: 01_ESTRUTURA_PACOTE.md  02_PYPROJECT.md  03_CLI_SKELETON.md
dev/FASE_02_NUCLEO/: 01_PROVIDER_ABC.md  02_TOOL_ABC.md
dev/FASE_03_PROVIDERS/: 01_ANTHROPIC.md  02_OPENAI.md  03_GEMINI.md  04_OLLAMA.md  05_REGISTRY.md
dev/FASE_04_TOOLS_FILESYSTEM/: 01_READ.md  02_WRITE.md  03_EDIT_E_MULTIEDIT.md  04_GLOB.md
dev/FASE_05_TOOLS_BUSCA_SHELL/: 01_GREP.md  02_BASH.md  03_BASH_BACKGROUND.md
dev/FASE_06_TOOLS_WEB_AGENTE/: 01_WEB.md  02_TODOWRITE.md  03_TASK_SUBAGENT.md  04_NOTEBOOK_EDIT.md
dev/FASE_07_CONFIG_PERMISSOES/: 01_CONFIG.md  02_PERMISSIONS.md
dev/FASE_08_AGENT_LOOP/: 01_AGENT.md
dev/FASE_09_UI/: 01_THEME_RENDER.md  02_STREAMING.md  03_REPL.md
dev/FASE_10_SLASH_COMMANDS/: 01_BASIC.md  02_PROVIDER_MODEL.md  03_SESSION_MCP.md
dev/FASE_11_MCP/: 01_MCP_CLIENT.md  02_MCP_LOADER.md
dev/FASE_12_SESSION/: 01_SESSION.md
dev/FASE_13_TESTES/: 01_TEST_PROVIDERS.md  02_TEST_TOOLS.md  03_TEST_AGENT_CLI.md
dev/FASE_14_BUILD_SMOKE/: 01_BUILD_E_SMOKE.md
dev/TOOLS/: 00_OVERVIEW.md  prompt.sh
docs/: index.md
docs/api/: agent.md  config.md  index.md  mcp.md  permissions.md  providers.md  session.md  tools.md
docs/architecture/: agent-loop.md  index.md  provider-translation.md  streaming.md  tool-registry.md
docs/configuration/: config-toml.md  env-vars.md  index.md  permissions.md
docs/contributing/: add-provider.md  add-tool.md  code-conventions.md  dev-setup.md  index.md
docs/getting-started/: core-concepts.md  first-config.md  index.md  installation.md  quickstart.md
docs/harness/: context-hub.md  eviction.md  hooks.md  index.md  profiles.md  skills.md  state.md  summarization.md  tool-patch.md  vfs.md
docs/mcp/: index.md
docs/providers/: anthropic.md  gemini.md  index.md  internal-llm-agentic.md  internal-llm.md  ollama.md  openai-family.md  switching-at-runtime.md
docs/recipes/: debug-bug.md  generate-docs.md  index.md  offline-with-ollama.md  refactor-code.md  review-pr.md  write-tests.md
docs/stylesheets/: extra.css
docs/tools/: agent.md  filesystem.md  index.md  search-and-shell.md  validated-write.md  web.md
docs/user-guide/: index.md  permission-modes.md  sessions.md  slash-commands.md  (+1 more)
tests/: __init__.py  conftest.py  test_agent.py  test_agent_extended.py  test_cli_extended.py  test_cli_skeleton.py  test_commands.py  test_config.py  test_mcp_client.py  test_mcp_loader.py  test_permissions.py  test_session.py  test_smoke_cli.py  test_ui_render.py  test_ui_streaming.py
(+215 files in other folders)
