[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "vulpcode"
description = "Terminal coding agent, multi-provider (Anthropic, OpenAI, Gemini, Ollama, ...)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vulpcode Authors" }]
keywords = ["ai", "cli", "coding-agent", "claude", "ollama", "llm", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dynamic = ["version"]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=0.3",
    "ollama>=0.4",
    "tomli-w>=1.0",
    "mcp>=1.0",
    "pathspec>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
]
search = [
    "duckduckgo-search>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "pymdown-extensions>=10.7",
]
docs-tools = [
    "python-docx>=1.1",
    "reportlab>=4.0",
    "pypdf>=4.0",
    "markdown-it-py>=3.0",
    "nbformat>=5.10",
    "PyYAML>=6.0",
    "sqlparse>=0.4",
    "pydot>=2.0",
]

[project.scripts]
vulp = "vulpcode.cli:main"
vulpcode = "vulpcode.cli:main"

[project.urls]
Homepage = "https://github.com/Vulp-Code/vulpcode"
Repository = "https://github.com/Vulp-Code/vulpcode"
Issues = "https://github.com/Vulp-Code/vulpcode/issues"

# HATCH
[tool.hatch.version]
path = "src/vulpcode/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vulpcode"]

[tool.hatch.build.targets.sdist]
include = [
    "src/vulpcode",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# RUFF
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "ASYNC",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "B017"]

# PYTEST
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers"]

# MYPY
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
ignore_missing_imports = true
files = ["src/vulpcode"]
